--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
@@ -26,7 +27,7 @@
           <a href="user-management.html" class="nav-link text-white">User Management</a>
         </li>
       </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
+      <button id="logoutBtn" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
     </div>
 
     <!-- Offcanvas Sidebar for smaller screens -->
@@ -44,7 +45,7 @@
             <a href="user-management.html" class="nav-link text-white">User Management</a>
           </li>
         </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
+        <button id="logoutBtnMobile" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
       </div>
     </div>
 
