--- a/public/user-management.html
+++ b/public/user-management.html
@@ -30,7 +30,7 @@
           <a href="#" class="nav-link text-white">User Management</a>
         </li>
       </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
+      <button id="logoutBtn" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
     </div>
 
     <!-- Offcanvas Sidebar for smaller screens -->
@@ -48,7 +48,7 @@
             <a href="#" class="nav-link text-white">User Management</a>
           </li>
         </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
+        <button id="logoutBtnMobile" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
       </div>
     </div>
 
