--- a/public/consumable.html
+++ b/public/consumable.html
@@ -141,7 +141,7 @@
       <!-- Action Modal -->
       <div class="modal fade" id="actionModal" tabindex="-1" aria-labelledby="actionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm modal-dialog-centered">
-          <div class="modal-content bg-body-tertiary text-dark border border-secondary-subtle rounded-3 shadow-sm">
+          <div class="modal-content bg-light text-dark border border-secondary-subtle rounded-3 shadow">
             
             <div class="modal-header border-bottom border-secondary-subtle">
               <h5 class="modal-title d-flex align-items-center gap-2" id="actionModalLabel">
@@ -153,17 +153,17 @@
             <div class="modal-body d-grid gap-2 px-3 py-3">
 
               <!-- Add Stock -->
-              <button id="addStockBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-success border border-success-subtle bg-success bg-opacity-10 rounded-2">
+              <button id="addStockBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-white bg-success border border-success rounded-2">
                 <i class="bi bi-box-arrow-in-down"></i> Add Stock
               </button>
 
-              <!-- Assign Item (Primary color) -->
-              <button id="assignItemBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-primary border border-primary-subtle bg-primary bg-opacity-10 rounded-2">
+              <!-- Assign Item -->
+              <button id="assignItemBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-white bg-primary border border-primary rounded-2">
                 <i class="bi bi-box-arrow-up"></i> Assign Item
               </button>
 
               <!-- View Ledger -->
-              <button id="viewLedgerBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-info border border-info-subtle bg-info bg-opacity-10 rounded-2">
+              <button id="viewLedgerBtn" class="btn d-flex align-items-center justify-content-center gap-2 text-white bg-info border border-info rounded-2">
                 <i class="bi bi-journal-text"></i> View Ledger
               </button>
 
@@ -172,7 +172,6 @@
           </div>
         </div>
       </div>
-
 
       <!-- Add Stock Modal -->
       <div class="modal fade" id="addStockModal" tabindex="-1" aria-labelledby="addStockModalLabel" aria-hidden="true">
