--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -10,44 +10,8 @@
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
 <body>
-  <!-- Toggle Button for Small Screens -->
-  <button class="btn btn-primary m-2 d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
- 
-  <div class="d-flex" id="wrapper">
-    <!-- Sidebar for md and up -->
-    <div class="bg-primary text-white p-3 vh-100 d-none d-md-block" id="sidebar">
-      <h4 class="mb-4">WRUS Asset Tracking System</h4>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">Dashboard</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="user-management.html" class="nav-link text-white">User Management</a>
-        </li>
-      </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
-    </div>
-
-    <!-- Offcanvas Sidebar for smaller screens -->
-    <div class="offcanvas offcanvas-start text-bg-primary" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasSidebarLabel">WRUS Asset Tracking System</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">Dashboard</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="user-management.html" class="nav-link text-white">User Management</a>
-          </li>
-        </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto"><i class="bi bi-box-arrow-right me-1"></i>Logout</button>
-      </div>
-    </div>
+  <div id="wrapper">
+    <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
     <div class="container-fluid p-4 d-flex flex-column" id="page-content" style="min-height: 100vh;">
@@ -55,40 +19,39 @@
         Welcome Admin
       </p>
 
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card text-white bg-primary mb-3">
-              <div class="card-header">Weather</div>
-              <div class="card-body">
-                <h5 class="card-title" id="weather">Loading...</h5>
-                <p class="card-text" id="temperature"></p>
-              </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Weather</div>
+            <div class="card-body">
+              <h5 class="card-title" id="weather">Loading...</h5>
+              <p class="card-text" id="temperature"></p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-white bg-success mb-3">
-              <div class="card-header">Date & Time</div>
-              <div class="card-body">
-                <h5 class="card-title" id="date"></h5>
-                <p class="card-text" id="time"></p>
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-white bg-success mb-3">
+            <div class="card-header">Date & Time</div>
+            <div class="card-body">
+              <h5 class="card-title" id="date"></h5>
+              <p class="card-text" id="time"></p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-white bg-danger mb-3">
-              <div class="card-header">Network Speed</div>
-              <div class="card-body">
-                <h5 class="card-title" id="speed-value">Calculating...</h5>
-                <p class="card-text">Download speed is refreshed every 30 seconds.</p>
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-white bg-danger mb-3">
+            <div class="card-header">Network Speed</div>
+            <div class="card-body">
+              <h5 class="card-title" id="speed-value">Calculating...</h5>
+              <p class="card-text">Download speed is refreshed every 30 seconds.</p>
             </div>
           </div>
         </div>
       </div>
-
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/admin/admin-verification.js"></script>
   <script type="module" src="js/dashboard.js"></script>
+  <script type="module" src="js/admin/admin-dashboard.js"></script>
 </body>
 </html>
