make sidebar responsive

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
 <body>
-  <div class="d-flex" id="wrapper">
+  <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
