--- a/public/consumable.html
+++ b/public/consumable.html
@@ -10,22 +10,23 @@
   <link rel="icon" type="image/png" href="images/favicon-32x32.png">
 </head>
 <body>
-  <div class="d-flex" id="wrapper">
+  <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
 
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <h4 class="mb-0">
+      <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4 gap-2 mb-4">
+        <h4 class="mb-2 mb-md-0">
           <i class="bi bi-box-seam me-2"></i> Items
         </h4>
-        <div class="d-flex flex-grow-1 justify-content-end gap-2 ms-3">
-          <div class="input-group" style="min-width: 350px; max-width: 500px; width: 100%;">
+
+        <div class="d-flex flex-column flex-sm-row justify-content-end align-items-stretch gap-2 w-100 w-md-auto">
+          <div class="input-group" style="min-width: 250px;">
             <span class="input-group-text">Search</span>
             <input type="text" id="searchInput" class="form-control" placeholder="Enter item name..." />
           </div>
-          <button id="showAddFormBtn" class="btn btn-primary">
+          <button id="showAddFormBtn" class="btn btn-primary w-100 w-sm-auto">
             <i class="bi bi-plus-circle me-1"></i> Add
           </button>
         </div>
