--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -12,11 +12,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
-  <link rel="stylesheet" href="css/ownership-summary.css" />
   <link rel="stylesheet" href="css/inventory-summary.css" />
 </head>
 <body>
-  <div class="d-flex" id="wrapper">
+  <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
@@ -85,8 +84,8 @@
 
       <!-- ICS Items User Modal-->
       <div class="modal fade" id="propertyModal" tabindex="-1" aria-labelledby="propertyModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen">
-          <div class="modal-content shadow-lg rounded-3 small"> <!-- ⬅️ `small` class reduces font size -->
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content shadow-lg rounded-3 small">
             
             <!-- Modal Header -->
             <div class="modal-header flex-wrap gap-3 justify-content-between align-items-center border-bottom-0 px-4 pt-4 pb-2">
@@ -142,6 +141,7 @@
           </div>
         </div>
       </div>
+
       
       <!-- ICS PDF Viewer Modal -->
       <div class="modal fade" id="ICS-pdfModal" tabindex="-1">
