--- a/public/user-management.html
+++ b/public/user-management.html
@@ -8,18 +8,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="stylesheet" href="../admin/user-management.css" />
   <link rel="stylesheet" href="css/dashboard.css">
 </head>
 
 <body>
-  <div id="wrapper">
+  <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
 
       <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
-        <div class="input-group me-3 mb-2" style="min-width: 400px;">
+      <div class="input-group me-3 mb-2 flex-grow-1">
           <span class="input-group-text" id="search-icon"><i class="bi bi-search"></i></span>
           <input
             type="text"
@@ -39,20 +38,24 @@
       </div>
 
       <!-- Data Table -->
-      <table class="table table-hover table-striped table-bordered align-middle text-center shadow-sm rounded">
-        <thead class="table-primary">
-          <tr>
-            <th>Username</th>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th>Middle Initial</th>
-            <th>Type</th>
-            <th>Status</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="usersTableBody"></tbody>
-      </table>
+      <div class="container-fluid p-3">
+        <div class="table-responsive">
+          <table class="table table-hover table-striped table-bordered align-middle shadow-sm rounded">
+            <thead class="table-primary text-center">
+              <tr>
+                <th>Username</th>
+                <th>Last Name</th>
+                <th>First Name</th>
+                <th>Middle Initial</th>
+                <th>Type</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody id="usersTableBody"></tbody>
+          </table>
+        </div>
+      </div>
+
       <div id="paginationControls" class="mt-3 text-center"></div>
 
       <!-- Add User Modal -->
@@ -155,139 +158,139 @@
         </div>
       </div>
 
-<!-- Edit User Modal with Tabs -->
-<div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content shadow-lg border-0">
-      <form id="editUserForm">
-        <div class="modal-header bg-primary text-white">
-          <h5 class="modal-title" id="editUserModalLabel">
-            <i class="bi bi-pencil-square me-2"></i>Edit User
-          </h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-
-        <div class="modal-body">
-          <input type="hidden" id="editUserId" />
-
-          <!-- Nav tabs -->
-          <ul class="nav nav-tabs mb-3" id="editUserTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link active"
-                id="edit-account-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#editAccountTab"
-                type="button"
-                role="tab"
-                aria-controls="editAccountTab"
-                aria-selected="true"
-              >
-                Account Info
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link"
-                id="edit-personal-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#editPersonalTab"
-                type="button"
-                role="tab"
-                aria-controls="editPersonalTab"
-                aria-selected="false"
-              >
-                Personal Info
-              </button>
-            </li>
-          </ul>
-
-          <!-- Tab panes -->
-          <div class="tab-content">
-            <!-- Account Info Tab -->
-            <div
-              class="tab-pane fade show active"
-              id="editAccountTab"
-              role="tabpanel"
-              aria-labelledby="edit-account-tab"
-            >
-              <div class="mb-3">
-                <label for="editUsername" class="form-label">Username</label>
-                <input type="text" class="form-control" id="editUsername" required />
+      <!-- Edit User Modal with Tabs -->
+      <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content shadow-lg border-0">
+            <form id="editUserForm">
+              <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="editUserModalLabel">
+                  <i class="bi bi-pencil-square me-2"></i>Edit User
+                </h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
-              <div class="mb-3">
-                <label for="editPassword" class="form-label">New Password</label>
-                <input type="password" class="form-control" id="editPassword" placeholder="Leave blank to keep current" />
-              </div>
+              <div class="modal-body">
+                <input type="hidden" id="editUserId" />
 
-              <div class="mb-3">
-                <label for="editConfirmPassword" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="editConfirmPassword" placeholder="Leave blank to keep current" />
-              </div>
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs mb-3" id="editUserTabs" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link active"
+                      id="edit-account-tab"
+                      data-bs-toggle="tab"
+                      data-bs-target="#editAccountTab"
+                      type="button"
+                      role="tab"
+                      aria-controls="editAccountTab"
+                      aria-selected="true"
+                    >
+                      Account Info
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="edit-personal-tab"
+                      data-bs-toggle="tab"
+                      data-bs-target="#editPersonalTab"
+                      type="button"
+                      role="tab"
+                      aria-controls="editPersonalTab"
+                      aria-selected="false"
+                    >
+                      Personal Info
+                    </button>
+                  </li>
+                </ul>
 
-              <div class="mb-3">
-                <label class="form-label">Status</label>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="editStatus" id="editStatusActive" value="active" />
-                  <label class="form-check-label" for="editStatusActive">Active</label>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                  <!-- Account Info Tab -->
+                  <div
+                    class="tab-pane fade show active"
+                    id="editAccountTab"
+                    role="tabpanel"
+                    aria-labelledby="edit-account-tab"
+                  >
+                    <div class="mb-3">
+                      <label for="editUsername" class="form-label">Username</label>
+                      <input type="text" class="form-control" id="editUsername" required />
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="editPassword" class="form-label">New Password</label>
+                      <input type="password" class="form-control" id="editPassword" placeholder="Leave blank to keep current" />
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="editConfirmPassword" class="form-label">Confirm Password</label>
+                      <input type="password" class="form-control" id="editConfirmPassword" placeholder="Leave blank to keep current" />
+                    </div>
+
+                    <div class="mb-3">
+                      <label class="form-label">Status</label>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="editStatus" id="editStatusActive" value="active" />
+                        <label class="form-check-label" for="editStatusActive">Active</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="editStatus" id="editStatusInactive" value="inactive" />
+                        <label class="form-check-label" for="editStatusInactive">Inactive</label>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Personal Info Tab -->
+                  <div
+                    class="tab-pane fade"
+                    id="editPersonalTab"
+                    role="tabpanel"
+                    aria-labelledby="edit-personal-tab"
+                  >
+                    <div class="row">
+                      <div class="col-md-6 mb-3">
+                        <label for="editLastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="editLastName" required />
+                      </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="editFirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="editFirstName" required />
+                      </div>
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="editMiddleInitial" class="form-label">Middle Initial</label>
+                      <input type="text" class="form-control" id="editMiddleInitial" maxlength="1" />
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="editNatureOfAppointment" class="form-label">Nature of Appointment</label>
+                      <select class="form-select" id="editNatureOfAppointment" required>
+                        <option value="" disabled selected>Select an option</option>
+                        <option value="Permanent">Permanent</option>
+                        <option value="COS">COS</option>
+                        <option value="Temporary">Temporary</option>
+                        <option value="Coterminous">Coterminous</option>
+                        <option value="Fixed Term">Fixed Term</option>
+                        <option value="Substitute">Substitute</option>
+                        <option value="Provisional">Provisional</option>
+                      </select>
+                    </div>
+                  </div>
                 </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="editStatus" id="editStatusInactive" value="inactive" />
-                  <label class="form-check-label" for="editStatusInactive">Inactive</label>
-                </div>
-              </div>
-            </div>
-
-            <!-- Personal Info Tab -->
-            <div
-              class="tab-pane fade"
-              id="editPersonalTab"
-              role="tabpanel"
-              aria-labelledby="edit-personal-tab"
-            >
-              <div class="row">
-                <div class="col-md-6 mb-3">
-                  <label for="editLastName" class="form-label">Last Name</label>
-                  <input type="text" class="form-control" id="editLastName" required />
-                </div>
-                <div class="col-md-6 mb-3">
-                  <label for="editFirstName" class="form-label">First Name</label>
-                  <input type="text" class="form-control" id="editFirstName" required />
-                </div>
               </div>
 
-              <div class="mb-3">
-                <label for="editMiddleInitial" class="form-label">Middle Initial</label>
-                <input type="text" class="form-control" id="editMiddleInitial" maxlength="1" />
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-success w-100">
+                  <i class="bi bi-save me-1"></i>Update User
+                </button>
               </div>
-
-              <div class="mb-3">
-                <label for="editNatureOfAppointment" class="form-label">Nature of Appointment</label>
-                <select class="form-select" id="editNatureOfAppointment" required>
-                  <option value="" disabled selected>Select an option</option>
-                  <option value="Permanent">Permanent</option>
-                  <option value="COS">COS</option>
-                  <option value="Temporary">Temporary</option>
-                  <option value="Coterminous">Coterminous</option>
-                  <option value="Fixed Term">Fixed Term</option>
-                  <option value="Substitute">Substitute</option>
-                  <option value="Provisional">Provisional</option>
-                </select>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
-
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-success w-100">
-            <i class="bi bi-save me-1"></i>Update User
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+      </div>
 
     </div>
   </div>
