--- a/public/consumable.html
+++ b/public/consumable.html
@@ -26,7 +26,7 @@
             <span class="input-group-text">Search</span>
             <input type="text" id="searchInput" class="form-control" placeholder="Enter item name..." />
           </div>
-          <button id="showAddFormBtn" class="btn btn-primary w-100 w-sm-auto">
+          <button id="showAddFormBtn" class="btn btn-primary" style="white-space: nowrap;">
             <i class="bi bi-plus-circle me-1"></i> Add
           </button>
         </div>
