--- a/public/ics.html
+++ b/public/ics.html
@@ -16,21 +16,21 @@
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
 
-    <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between flex-wrap gap-2 mb-4">
-      <h5 class="mb-2 mb-md-0 d-flex align-items-center">
-        <i class="bi bi-tools me-2"></i> Equipment
-      </h5>
+      <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between flex-wrap gap-2 mb-4">
+        <h5 class="mb-2 mb-md-0 d-flex align-items-center">
+          <i class="bi bi-tools me-2"></i> Equipment
+        </h5>
 
-      <div class="d-flex flex-column flex-sm-row align-items-stretch justify-content-end gap-2 w-100 w-md-auto">
-        <div class="input-group" style="min-width: 250px;">
-          <span class="input-group-text">Search</span>
-          <input type="text" id="searchBar" class="form-control" placeholder="Enter item name..." />
+        <div class="d-flex flex-column flex-sm-row align-items-stretch justify-content-end gap-2 w-100 w-md-auto">
+          <div class="input-group" style="min-width: 250px;">
+            <span class="input-group-text">Search</span>
+            <input type="text" id="searchBar" class="form-control" placeholder="Enter item name..." />
+          </div>
+          <button id="addBtn" class="btn btn-primary" style="white-space: nowrap;">
+            <i class="bi bi-plus-circle me-1"></i> Add
+          </button>
         </div>
-        <button id="addBtn" class="btn btn-primary w-100 w-sm-auto">
-          <i class="bi bi-plus-circle me-1"></i> Add
-        </button>
       </div>
-    </div>
 
       <div class="table-responsive">
         <table class="table table-bordered table-striped">
