change folder structure

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -276,9 +276,6 @@
   <!-- jsPDF and AutoTable -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
-
-  <script type="module" src="js/consumable-data.js"></script>
-  <script type="module" src="js/consumable-ui.js"></script>
+  <script type="module" src="js/consumable/consumable-main.js"></script>
 </body>
 </html>
