--- a/public/ics.html
+++ b/public/ics.html
@@ -297,8 +297,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/ics-data.js"></script>
-  <script type="module" src="js/ics-ui.js"></script>
+  <script type="module" src="js/ics/ics-main.js"></script>
   <script type="module" src="js/upload/upload.js"></script>
 </body>
 </html>
