--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -166,7 +166,6 @@
   ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-  <script type="module" src="js/ownership-summary-data.js"></script>
-  <script type="module" src="js/ownership-summary-ui.js"></script>
+  <script type="module" src="js/summary/summary-main.js"></script>
 </body>
 </html>
