--- a/public/user-management.html
+++ b/public/user-management.html
@@ -297,6 +297,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
- <script type="module" src="js/admin/user-management-ui.js"></script>
+ <script type="module" src="js/user/user-main.js"></script>
 
 </html>
