--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -52,10 +52,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module">
-    import { renderSidebar } from './js/components/sidebar.js';
-    renderSidebar();
-  </script>
-  <script type="module" src="js/dashboard.js"></script>
+  <script type="module" src="./js/dashboard.js"></script>
 </body>
 </html>
