separate the main js files into ui functions and init

--- a/public/inventory-summary.html
+++ b/public/inventory-summary.html
@@ -145,7 +145,7 @@
       
       <!-- ICS PDF Viewer Modal -->
       <div class="modal fade" id="ICS-pdfModal" tabindex="-1">
-        <div class="modal-dialog modal-fullscreen-custom modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-dialog modal-fullscreen modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">ICS PDF Report</h5>
@@ -158,6 +158,7 @@
         </div>
       </div>
 
+
     </div>
   </div>
   <!-- Bootstrap JS Bundle (must come before your own JS) -->
@@ -166,6 +167,6 @@
   ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-  <script type="module" src="js/summary/summary-main.js"></script>
+  <script type="module" src="js/summary/summary-init.js"></script>
 </body>
 </html>
