--- a/public/consumable.html
+++ b/public/consumable.html
@@ -58,7 +58,7 @@
             
             <div class="modal-header bg-primary text-white rounded-top-4">
               <h5 class="modal-title fw-semibold" id="addItemModalLabel">Add New Item</h5>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
             <div class="modal-body">
@@ -276,6 +276,6 @@
   <!-- jsPDF and AutoTable -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-  <script type="module" src="js/consumable/consumable-main.js"></script>
+  <script type="module" src="js/consumable/consumable-init.js"></script>
 </body>
 </html>
