--- a/public/ics.html
+++ b/public/ics.html
@@ -285,8 +285,15 @@
               </div>
 
               <div class="modal-footer px-4 py-3">
-                <button type="submit" class="btn btn-primary">Update ICS</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary">
+                  <i class="bi bi-save"></i> Update ICS
+                </button>
+                <button type="button" id="deleteICSButton" class="btn btn-danger">
+                  <i class="bi bi-trash"></i> Delete
+                </button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  <i class="bi bi-x-circle"></i> Cancel
+                </button>
               </div>
             </form>
           </div>
