--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="card p-4" style="width: 100%; max-width: 400px;">
-    <h3 class="card-title text-center mb-4">WRUS Asset Tracking System</h3>
+    <h3 class="card-title text-center mb-4">WRUS Portal</h3>
     <form id="loginForm">
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
