--- a/public/report.html
+++ b/public/report.html
@@ -13,13 +13,11 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-    <h4>
-      <i class="bi bi-droplet-fill me-1"></i> Water Users and Sources
-    </h4>
+      <h4><i class="bi bi-bar-chart-fill"></i> Accomplishment Report</h4>
 
     </div>
   </div>
-  <script type="module" src="js/wrus/wrus-init.js"></script>
+  <script type="module" src="js/report/report-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
