add position and duty to user object

--- a/public/map.html
+++ b/public/map.html
@@ -17,6 +17,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
+        <h4><i class="bi bi-map"></i> Map Generator</h4>
         <div id="map" style="height: 500px;"></div>
     </div>
   </div>
