--- a/public/permit.html
+++ b/public/permit.html
@@ -13,7 +13,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-        <h4><i class="bi bi-file-earmark-text-fill"></i> Water Permit</h4>
+        <h4><i class="bi bi-file-earmark-text"></i> Water Permit</h4>
 
     </div>
   </div>
