--- a/public/report.html
+++ b/public/report.html
@@ -13,7 +13,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-      <h4><i class="bi bi-bar-chart-fill"></i> Accomplishment Report</h4>
+      <h4><i class="bi bi-bar-chart"></i> Accomplishment Report</h4>
 
     </div>
   </div>
