--- a/public/wus.html
+++ b/public/wus.html
@@ -14,7 +14,7 @@
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
     <h4>
-      <i class="bi bi-droplet-fill me-1"></i> Water Users and Sources
+      <i class="bi bi-droplet-half"></i> Water Users and Sources
     </h4>
 
     </div>
