change wus ID format

--- a/public/water-user.html
+++ b/public/water-user.html
@@ -40,6 +40,7 @@
         <table class="table table-bordered table-hover align-middle">
           <thead class="table-primary">
             <tr>
+              <th rowspan="2">ID</th>
               <th rowspan="2">Name of Water User</th>
               <th rowspan="2">Location</th>
               <th colspan="2" class="text-center">GPS Coordinates</th>
@@ -119,7 +120,7 @@
 
                   <!-- Type -->
                   <div class="col-md-6">
-                    <label for="type" class="form-label">Type <span class="text-danger">*</span></label>
+                    <label for="type" class="form-label">Type of Water Source <span class="text-danger">*</span></label>
                     <input type="text" class="form-control" id="type" required>
                     <div class="invalid-feedback">
                       Please specify the water user type.
@@ -219,7 +220,7 @@
 
                   <!-- Type -->
                   <div class="col-md-6">
-                    <label for="editType" class="form-label">Type <span class="text-danger">*</span></label>
+                    <label for="editType" class="form-label">Type of Water Source<span class="text-danger">*</span></label>
                     <input type="text" class="form-control" id="editType" required>
                     <div class="invalid-feedback">
                       Please specify the water user type.
