--- a/public/ics.html
+++ b/public/ics.html
@@ -304,6 +304,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/browser-image-compression@2.0.2/dist/browser-image-compression.js"></script>
   <script type="module" src="js/ics/ics-init.js"></script>
 </body>
 </html>
